# orbDetHOUSE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  config.yaml  configNew.yml  config_ccdata.yml  config_cut4.yml  config_cut6.yml  config_cut6_dense.yml  config_house.yml  config_stella.yml  config_ukf.yml  convertECEF2ECI  convertECEF2ECI.cpp  cut_sigma_points.m  dyn.cpp  dyn.hpp  eigen_csv.hpp  filter_aux.hpp  filter_testing  filter_testing.cpp  filter_testing.hpp  house.cpp  house.hpp  makefile  makefileDenseMeasMC  makefileOrbProp  makefile_  makefile_merge  makefile_org  makefile_py  makefile_py_wsl  pearsonator.hpp  plot_rmse.r  plot_rmse_all.r  plot_runtime.r  (+21 more)
CT_Gauss/: CT.cpp  run.sh
CT_Pearson/: run.sh
CUT/: pts_4_1.csv  pts_4_10.csv  pts_4_11.csv  pts_4_12.csv  pts_4_13.csv  pts_4_14.csv  pts_4_2.csv  pts_4_3.csv  pts_4_4.csv  pts_4_5.csv  pts_4_6.csv  pts_4_7.csv  pts_4_8.csv  pts_4_9.csv  pts_6_2.csv  pts_6_3.csv  pts_6_4.csv  pts_6_5.csv  pts_6_6.csv  pts_6_7.csv  pts_6_8.csv  pts_6_9.csv  pts_8_2.csv  pts_8_3.csv  pts_8_4.csv  pts_8_5.csv  pts_8_6.csv  wts_4_1.csv  wts_4_10.csv  wts_4_11.csv  wts_4_12.csv  wts_4_13.csv  wts_4_14.csv  wts_4_15.csv  wts_4_16.csv  wts_4_17.csv  wts_4_18.csv  wts_4_2.csv  wts_4_3.csv  wts_4_4.csv  (+18 more)
Orbit/: CT.cpp  compile.sh  orbit.cpp  plot_rmse.r  processing.r
Orbit - Ground Station/: IGS_ERP.txt  Makefile  _testYaml.cpp  cof19037.erp  cof19037_mod.erp  compile.sh  config.yaml  orbit.cpp  performance.txt  plot_err.r  plot_rmse.r  processing.r  validateMode.m  validateModel.cpp  validateModel.m
Orbit_old/: plot.sh  plot_err.r  run.sh  statct.cpp
auxdata/: COD0MGXFIN_GPSW2330.ERP  cod13567.erp  cod15657.erp  cod21577.erp  cod21587.erp  cod21597.erp
ccdata/: MatchedPasses_NoradID_46984.PAS  meas_data_id_46984.csv  stn_eci_coordinates.csv
filter/: dyn.cpp  dyn.hpp  eigen_csv.hpp  filter_aux.cpp  filter_aux.hpp  house.cpp  house.hpp  multiNormal.cpp  multiNormal.hpp  multiPearson.cpp  multiPearson.hpp  ode.cpp  ode.hpp  pearsonator.cpp  pearsonator.hpp  srhouse.cpp  srhouse.hpp  srukf.cpp  srukf.hpp  timer.hpp  ukf.cpp  ukf.hpp  ut.cpp  ut.hpp
filters/: dyn.cpp  filter_aux.cpp  house.cpp  house.hpp  ode.hpp  ukf.cpp
makefiles/: makefileCCData  makefileECEF2ECIConversion  makefileMC  makefileOrbProp  makefileSparseMeasMC
mqdata/: SL-2469(NORAD-48128)_data.csv  stn_eci_coordinates.csv
orbitDetermination/: acsConfig.cpp  acsConfig.hpp  algebra.cpp  algebra.hpp  atmosphereModel.cpp  atmosphereModel.hpp  auxillaryData.cpp  auxillaryData.hpp  common.hpp  config.hpp  constants.cpp  constants.hpp  coordTrans.cpp  eigenIncluder.hpp  enums.h  forceModels.cpp  forceModels.hpp  gTime.cpp  gTime.hpp  gravity.cpp  gravity.hpp  jplEph.hpp  nrlmsise-00.c  opMain.cpp  satRefSys.hpp
orbmdl/: atmosphereModel.cpp  atmosphereModel.hpp  auxillaryData.cpp  auxillaryData.hpp  config.hpp  configDefault.hpp  constants.cpp  constants.hpp  coordTrans.cpp  coordTrans.hpp  forceModels.cpp  forceModels.hpp  gravity.cpp  gravity.hpp  jplEph.cpp  jplEph.hpp  orbit_propagator_wrapper.cpp  orbit_propagator_wrapper.h  orbit_propagator_wrapper_py.cpp  satRefSys.cpp  satRefSys.hpp
projectile/: plot_err.r  plot_rmse.r  processing.r  projectile.cpp  run.sh
pyscripts/: analyseCCData.py  analyseCCODResults.py  analyseCCODResultsHOUSE.py  analyseOrbitProp.py  calculator.ipynb  compare_csv.py  downloadTLE.py  genInitOrbit.py  interpolateStates.py  plot3DTruth.py  plotMCSErr.py  plotMCSErrLorenz.py  plotMeas.py  plotNES.py  plotRMSE.py  plotRMSELorenz.py  plotRunTime.py  plot_meas.py  plot_rmse.py  processing.py  readCCData.py  readCCDataMatched.py  readSentinel6AXML.py  testLorenz96.py  test_orbit_propagator_wrapper.py  tleSentinel6A.txt
refdata/: S6A_AX____POE__AX_20210514T215923_20210516T015923_20220223T160812__________________SALP_OPE_NT____.EOF  S6A_AX____POE__AX_20210515T215923_20210517T015923_20220223T160818__________________SALP_OPE_NT____.EOF  S6A_AX____POE__AX_20210516T215923_20210518T015923_20220223T160822__________________SALP_OPE_NT____.EOF  S6A_AX____POE__AX_20210517T215923_20210519T015923_20220223T160827__________________SALP_OPE_NT____.EOF  S6A_AX____POE__AX_20210518T215923_20210520T015923_20220223T160830__________________SALP_OPE_NT____.EOF  od_ecef_id_46984.csv  od_eci_id_46984.csv  od_ref_id_46984.csv  sentinel6a_cpf_210515_13501.eum  tleStarlink.txt
rigid_body/: plot_err.r  plot_rmse.r  plot_runtime.r  rigid_body.cpp  run.sh
rscripts/: plot_err.r  plot_rmse.r  plot_rmse_all.r  plot_runtime.r  processing.r  processing_all.r
scripts/: CMakeLists.txt  bindings.cpp  convertECEF2ECI.cpp  orbit_propagator_wrapper.cpp  orbit_propagator_wrapper.h  orbit_propagator_wrapper_py.cpp  projectile.cpp  testLorenz.cpp  testOrbDet.hpp  testOrbDetCCData.cpp  testOrbDetDenseMeasMC.cpp  testOrbDetMQData.cpp  testOrbDetSparseMeasMC.cpp  testOrbDetSparseMeasMCPearson.cpp  testOrbProp.cpp  test_orbit_propagator_wrapper.cpp  test_python_wrapper.py
test/: testBoostRKF78  testBoostRKF78.cpp  testReadYamlFile.cpp  testReadYamlFile.hpp
tests/: calculateStnCoordinates.cpp  interpolateState.cpp  testBoostRKF78.cpp  testReadYamlFile.cpp  testReadYamlFile.hpp
yamlinputs/: config_cut4.yml  config_cut6.yml  config_house.yml  config_house_dense.yml  config_orb.yml  config_ukf.yml  config_ukf_dense.yml
yamls/: config.yaml  config_ccdata.yml  config_ccdata_mee.yml  config_cut4.yml  config_cut4_dense.yml  config_cut6.yml  config_cut6_dense.yml  config_cut6_sparse.yml  config_house.yml  config_house_dense.yml  config_house_sparse.yml  config_house_sparse_pearson.yml  config_lorenz.yml  config_orb.yml  config_ukf.yml  (+4 more)
(+9110 files in other folders)
